# comment

./: Cargo.nix  Cargo.toml  README.md  bar  flake.nix  signal.sh
src/: main.rs
tests/: executable.rs
