[package]
name = "comment"
version = "0.0.0"
edition = "2021"

[dev-dependencies]
tempfile = "3.10.1"
assert_cmd = "2.0.14"

[dependencies]
anyhow = "1.0.81"
async-signal = "0.2.7"
futures-lite = "2.3.0"
tokio = {version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "process"]}
tokio-macros = "2.3.0"
async-process = "2.2.3"
futures = "0.3.30"
